--- a/src/components/Favorite/Favorite.module.scss
+++ b/src/components/Favorite/Favorite.module.scss
@@ -1,15 +1,5 @@
+@use "sass:math";
 @import "../../styles/settings.scss";
-
-.hero {
-	padding: $base-size;
-}
-
-.title {
-	padding: ($base-size * 3) 0;
-	text-align: center;
-	font-size: ($base-size * 3);
-	text-transform: uppercase;
-}
 
 .subtitle {
 	padding: ($base-size * 2) 0;
@@ -19,6 +9,24 @@
 	font-weight: normal;
 }
 
-.title + .subtitle {
-	margin-top: (-$base-size * 3);
+.cardsWrapper {
+	justify-content: end;
+	width: calc(33% - 12px);
+	background: $color-light;
+	margin: 0 auto;
+	padding: ($base-size * 1.5);
+	border-radius: $radius;
+	box-shadow: 0 math.div($base-size, 4) 0 rgba(0, 0, 0, 0.3);
+	color: $color-dark;
+}
+
+.cards {
+	padding: math.div($base-size, 2) 0;
+}
+
+@media (max-width: 767px) {
+	.cardsWrapper {
+		width: 100%;
+		margin: 0 0 $base-size 0;
+	}
 }
